--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@aws-sdk/client-s3": "^3.901.0",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
